--- a/PoTunes/PoTunes/Info.plist
+++ b/PoTunes/PoTunes/Info.plist
@@ -34,7 +34,9 @@
 		<true/>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string>哈哈哈哈</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>哈哈哈哈哈哈</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>BebasNeue.otf</string>
