--- a/PoTunes/破音万里.xcodeproj/xcshareddata/xcschemes/破音万里.xcscheme
+++ b/PoTunes/破音万里.xcodeproj/xcshareddata/xcschemes/破音万里.xcscheme
@@ -109,7 +109,7 @@
       buildConfiguration = "Debug">
    </AnalyzeAction>
    <ArchiveAction
-      buildConfiguration = "ad hoc distribution"
+      buildConfiguration = "Release"
       customArchiveName = "&#x7834;&#x97f3;&#x4e07;&#x91cc;"
       revealArchiveInOrganizer = "YES">
    </ArchiveAction>
