--- a/PoTunes/破音万里.xcodeproj/xcshareddata/xcschemes/破音万里.xcscheme
+++ b/PoTunes/破音万里.xcodeproj/xcshareddata/xcschemes/破音万里.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0730"
+   LastUpgradeVersion = "0800"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -75,6 +75,13 @@
             ReferencedContainer = "container:&#x7834;&#x97f3;&#x4e07;&#x91cc;.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "OS_ACTIVITY_MODE"
+            value = "disable"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
