--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,8 @@ playground.xcworkspace
 # https://guides.cocoapods.org/using/using-cocoapods.html#should-i-check-the-pods-directory-into-source-control
 #
 
+# /Pods
+
 
 # Carthage
 #
