--- a/PoTunes/guide.plist
+++ b/PoTunes/guide.plist
@@ -14,6 +14,7 @@
 			<string>返回上级：点击上方tab/从屏幕左侧边缘向右滑动</string>
 			<string>歌词：双击专辑封面区域</string>
 			<string>微信分享：长按歌曲列表歌曲</string>
+			<string>下层返回播放器界面：双击Tabbar</string>
 		</array>
 		<key>title</key>
 		<string>单指操作</string>
@@ -24,6 +25,7 @@
 			<string>单曲循环/取消：播放器界面双指单击</string>
 			<string>顺序播放：播放器界面双指左向右滑动</string>
 			<string>随机播放：播放器界面双指右向左滑动</string>
+			<string>播放器界面歌曲分享：双指按住播放器界面</string>
 		</array>
 		<key>title</key>
 		<string>双指操作</string>
